# predictive-maintenance-iot

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: feature_config.yaml  model_config.yaml
data/: README.md
docs/: architecture.md  business_case.md
models/: README.md
scripts/: generate_figures.py  run_pipeline.py  train_all.sh
src/: __init__.py
src/dashboard/: app.py
src/dashboard/components/: fleet_health.py  kpi_cards.py
src/data/: feature_engine.py  loader.py  preprocessor.py  validation.py
src/evaluation/: cost_analysis.py  metrics.py  visualization.py
src/models/: baseline.py  lstm_model.py  train.py
src/sql/: analytics_queries.sql
src/utils/: config.py  logger.py
tests/: __init__.py  test_data_loader.py  test_metrics.py  test_models.py
